--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@popperjs/core": "^2.11.8",
+    "@radial-color-picker/vue-color-picker": "^5.0.1",
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.1",
     "localforage": "^1.10.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persist": "^1.0.0",
     "svg-sprite-loader": "^6.0.11",
+    "theme-change": "^2.5.0",
     "three": "^0.160.0",
     "three-css2drender": "^1.0.0",
+    "vcolorpicker": "^2.0.12",
     "vue": "^3.3.8",
+    "vue-accessible-color-picker": "^5.0.1",
     "vue-router": "^4.2.5",
+    "vue3-colorpicker": "^2.2.3",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
