--- a/package.json
+++ b/package.json
@@ -16,15 +16,22 @@
     "@element-plus/icons-vue": "^2.1.0",
     "@popperjs/core": "^2.11.8",
     "@radial-color-picker/vue-color-picker": "^5.0.1",
+    "@tsparticles/engine": "^3.0.3",
+    "@tsparticles/slim": "^3.0.3",
+    "@tsparticles/vue3": "^3.0.0",
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.1",
     "localforage": "^1.10.0",
+    "particles.vue3": "^2.12.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persist": "^1.0.0",
+    "sparticles": "^1.3.1",
     "svg-sprite-loader": "^6.0.11",
     "theme-change": "^2.5.0",
     "three": "^0.160.0",
     "three-css2drender": "^1.0.0",
+    "tsparticles": "^3.0.3",
+    "tsparticles-engine": "^2.12.0",
     "vcolorpicker": "^2.0.12",
     "vue": "^3.3.8",
     "vue-accessible-color-picker": "^5.0.1",
