--- a/package.json
+++ b/package.json
@@ -1,83 +1,73 @@
 {
-  "name": "log-lottery",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite --host 0.0.0.0",
-    "build": "vue-tsc --noEmit && vite build",
-    "build:pre": "vue-tsc --noEmit && vite build --mode prebuild",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "preview": "vite preview",
-    "lint": "eslint ./src --ext .vue,.js,.ts,.jsx,.tsx --fix"
-  },
-  "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
-    "@popperjs/core": "^2.11.8",
-    "@radial-color-picker/vue-color-picker": "^5.0.1",
-    "@tsparticles/engine": "^3.0.3",
-    "@tsparticles/slim": "^3.0.3",
-    "@tsparticles/vue3": "^3.0.0",
-    "@vueuse/core": "^10.6.1",
-    "axios": "^1.6.1",
-    "canvas-confetti": "^1.9.2",
-    "localforage": "^1.10.0",
-    "particles.vue3": "^2.12.0",
-    "pinia": "^2.1.7",
-    "pinia-plugin-persist": "^1.0.0",
-    "sparticles": "^1.3.1",
-    "svg-sprite-loader": "^6.0.11",
-    "theme-change": "^2.5.0",
-    "three": "^0.160.0",
-    "three-css2drender": "^1.0.0",
-    "tsparticles": "^3.0.3",
-    "tsparticles-engine": "^2.12.0",
-    "vcolorpicker": "^2.0.12",
-    "vue": "^3.3.8",
-    "vue-accessible-color-picker": "^5.0.1",
-    "vue-router": "^4.2.5",
-    "vue-toast-notification": "^3",
-    "vue3-colorpicker": "^2.2.3",
-    "xlsx": "^0.18.5",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@iconify-json/ep": "^1.1.12",
-    "@iconify-json/fluent": "^1.1.40",
-    "@tailwindcss/typography": "^0.5.10",
-    "@testing-library/vue": "^8.0.0",
-    "@types/canvas-confetti": "^1.6.4",
-    "@types/node": "^20.9.0",
-    "@types/three": "^0.160.0",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
-    "@vitejs/plugin-vue": "^4.4.1",
-    "@vitest/ui": "^0.34.6",
-    "@vue/test-utils": "^2.4.2",
-    "autoprefixer": "^10.4.16",
-    "daisyui": "^4.0.4",
-    "eslint": "^8.53.0",
-    "eslint-plugin-vue": "^9.18.1",
-    "fast-glob": "^3.3.2",
-    "happy-dom": "^12.10.3",
-    "husky": "^8.0.3",
-    "jsdom": "^22.1.0",
-    "path": "^0.12.7",
-    "postcss": "^8.4.31",
-    "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2",
-    "unplugin-auto-import": "^0.16.7",
-    "unplugin-icons": "^0.17.4",
-    "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.5.0",
-    "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-inspect": "^0.7.42",
-    "vite-plugin-svg-icons": "^2.0.1",
-    "vitest": "^0.34.6",
-    "vue-tsc": "^1.8.22"
-  }
+    "name": "log-lottery",
+    "private": true,
+    "version": "0.0.1",
+    "type": "module",
+    "license": "MIT",
+    "scripts": {
+        "dev": "vite --host 0.0.0.0",
+        "build": "vue-tsc --noEmit && vite build",
+        "build:pre": "vue-tsc --noEmit && vite build --mode prebuild",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "preview": "vite preview",
+        "lint": "eslint ./src --ext .vue,.js,.ts,.jsx,.tsx --fix"
+    },
+    "dependencies": {
+        "@tweenjs/tween.js": "^21.0.0",
+        "@vueuse/core": "^10.6.1",
+        "axios": "^1.6.1",
+        "canvas-confetti": "^1.9.2",
+        "localforage": "^1.10.0",
+        "pinia": "^2.1.7",
+        "pinia-plugin-persist": "^1.0.0",
+        "sparticles": "^1.3.1",
+        "theme-change": "^2.5.0",
+        "three": "^0.160.0",
+        "three-css3d": "^1.0.6",
+        "three-trackballcontrols": "^0.9.0",
+        "vue": "^3.3.8",
+        "vue-router": "^4.2.5",
+        "vue-toast-notification": "^3",
+        "vue3-colorpicker": "^2.2.3",
+        "xlsx": "^0.18.5",
+        "zod": "^3.22.4"
+    },
+    "devDependencies": {
+        "@iconify-json/ep": "^1.1.12",
+        "@iconify-json/fluent": "^1.1.40",
+        "@tailwindcss/typography": "^0.5.10",
+        "@testing-library/vue": "^8.0.0",
+        "@types/canvas-confetti": "^1.6.4",
+        "@types/node": "^20.9.0",
+        "@types/three": "^0.160.0",
+        "@typescript-eslint/eslint-plugin": "^6.11.0",
+        "@typescript-eslint/parser": "^6.11.0",
+        "@vitejs/plugin-vue": "^4.4.1",
+        "@vitest/ui": "^0.34.6",
+        "@vue/test-utils": "^2.4.2",
+        "autoprefixer": "^10.4.16",
+        "daisyui": "^4.0.4",
+        "eslint": "^8.53.0",
+        "eslint-plugin-vue": "^9.18.1",
+        "happy-dom": "^12.10.3",
+        "husky": "^8.0.3",
+        "jsdom": "^22.1.0",
+        "path": "^0.12.7",
+        "postcss": "^8.4.31",
+        "rollup-plugin-visualizer": "^5.9.2",
+        "sass": "^1.69.5",
+        "sass-loader": "^13.3.2",
+        "tailwindcss": "^3.3.5",
+        "typescript": "^5.2.2",
+        "unplugin-auto-import": "^0.16.7",
+        "unplugin-icons": "^0.17.4",
+        "unplugin-vue-components": "^0.25.2",
+        "vite": "^4.5.0",
+        "vite-plugin-compression": "^0.5.1",
+        "vite-plugin-inspect": "^0.7.42",
+        "vite-plugin-svg-icons": "^2.0.1",
+        "vitest": "^0.34.6",
+        "vue-tsc": "^1.8.22"
+    }
 }
