--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "axios": "^1.6.1",
         "canvas-confetti": "^1.9.2",
         "dayjs": "^1.11.10",
+        "github-markdown-css": "^5.5.0",
         "localforage": "^1.10.0",
+        "markdown-it": "^14.0.0",
         "pinia": "^2.1.7",
         "pinia-plugin-persist": "^1.0.0",
         "sparticles": "^1.3.1",
@@ -27,6 +29,7 @@
         "three": "^0.160.0",
         "three-css3d": "^1.0.6",
         "vue": "^3.3.8",
+        "vue-dompurify-html": "^5.0.1",
         "vue-router": "^4.2.5",
         "vue-toast-notification": "^3",
         "vue3-colorpicker": "^2.2.3",
