--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "sass": "^1.77.6",
         "sass-loader": "^14.2.1",
         "tailwindcss": "^3.4.4",
+        "terser": "^5.31.1",
         "typescript": "^5.5.3",
         "unplugin-auto-import": "^0.17.6",
         "unplugin-icons": "^0.19.0",
