--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "dev": "vite --host 0.0.0.0",
         "build": "vue-tsc --noEmit && vite build",
         "build:pre": "vue-tsc --noEmit && vite build --mode prebuild",
-        "build:file": "vue-tsc --noEmit && vite build --mode file && node HandleHTML.js",
+        "build:file": "vue-tsc --noEmit && vite build --mode file",
         "test": "vitest",
         "test:ui": "vitest --ui",
         "preview": "vite preview",
