--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "log-lottery",
     "private": true,
-    "version": "0.0.2",
+    "version": "0.0.3",
     "type": "module",
     "license": "MIT",
     "scripts": {
         "dev": "vite --host 0.0.0.0",
         "build": "vue-tsc --noEmit && vite build",
         "build:pre": "vue-tsc --noEmit && vite build --mode prebuild",
+        "build:file": "vue-tsc --noEmit && vite build --mode file",
         "test": "vitest",
         "test:ui": "vitest --ui",
         "preview": "vite preview",
@@ -52,6 +53,7 @@
         "@types/three": "^0.166.0",
         "@typescript-eslint/eslint-plugin": "^8.16.0",
         "@typescript-eslint/parser": "^8.16.0",
+        "@vitejs/plugin-legacy": "^6.0.0",
         "@vitejs/plugin-vue": "^5.2.0",
         "@vitest/ui": "^2.1.5",
         "@vue/test-utils": "^2.4.6",
