--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,15 @@ dist
 .yarn/install-state.gz
 .pnp.*
 target
+
+# package-lock.json
+package-lock.json
+
+# auto-imports.d.ts
+src/auto-imports.d.ts
+
+# components.d.ts
+src/components.d.ts
+
+# .vscode
+.vscode
