--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "sparticles": "^1.3.1",
         "three": "^0.166.0",
         "three-css3d": "^1.0.6",
+        "uuid": "^13.0.0",
         "vue": "^3.5.13",
         "vue-dompurify-html": "^5.2.0",
         "vue-i18n": "^11.1.12",
