--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "dexie": "^4.2.1",
         "github-markdown-css": "^5.8.0",
         "localforage": "^1.10.0",
+        "lodash-es": "^4.17.21",
         "lucide-vue-next": "^0.555.0",
         "markdown-it": "^14.1.0",
         "pinia": "^3.0.3",
@@ -34,6 +35,7 @@
         "uuid": "^13.0.0",
         "vue": "^3.5.13",
         "vue-dompurify-html": "^5.2.0",
+        "vue-draggable-plus": "^0.6.0",
         "vue-i18n": "^11.1.12",
         "vue-router": "^4.5.0",
         "vue-toast-notification": "^3",
@@ -51,6 +53,7 @@
         "@tailwindcss/vite": "^4.1.13",
         "@testing-library/vue": "^8.1.0",
         "@types/canvas-confetti": "^1.6.4",
+        "@types/lodash-es": "^4.17.12",
         "@types/markdown-it": "^14.1.2",
         "@types/node": "^24.5.2",
         "@types/three": "^0.166.0",
