--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "github-markdown-css": "^5.8.0",
         "localforage": "^1.10.0",
         "lodash-es": "^4.17.21",
-        "lucide-vue-next": "^0.555.0",
+        "lucide-vue-next": "^0.556.0",
         "markdown-it": "^14.1.0",
         "pinia": "^3.0.3",
         "pinia-plugin-persist": "^1.0.0",
@@ -36,7 +36,7 @@
         "vue": "^3.5.13",
         "vue-dompurify-html": "^5.2.0",
         "vue-draggable-plus": "^0.6.0",
-        "vue-i18n": "^11.1.12",
+        "vue-i18n": "^11.2.2",
         "vue-router": "^4.5.0",
         "vue-toast-notification": "^3",
         "vue3-colorpicker": "^2.3.0",
@@ -51,25 +51,27 @@
         "@iconify-json/fluent": "^1.2.8",
         "@tailwindcss/typography": "^0.5.15",
         "@tailwindcss/vite": "^4.1.13",
+        "@tauri-apps/cli": "^2.9.5",
         "@testing-library/vue": "^8.1.0",
         "@types/canvas-confetti": "^1.6.4",
         "@types/lodash-es": "^4.17.12",
         "@types/markdown-it": "^14.1.2",
-        "@types/node": "^24.5.2",
+        "@types/node": "^24.10.2",
         "@types/three": "^0.166.0",
-        "@typescript-eslint/eslint-plugin": "^8.16.0",
-        "@typescript-eslint/parser": "^8.16.0",
+        "@typescript-eslint/eslint-plugin": "^8.49.0",
+        "@typescript-eslint/parser": "^8.49.0",
         "@vitejs/plugin-legacy": "^7.2.1",
         "@vitejs/plugin-vue": "^6.0.1",
         "@vitest/ui": "^4.0.15",
         "@vue/test-utils": "^2.4.6",
+        "@vue/tsconfig": "^0.8.1",
         "autoprefixer": "^10.4.20",
         "baseline-browser-mapping": "^2.8.32",
         "daisyui": "^5.1.13",
         "eslint": "^9.15.0",
         "eslint-plugin-vue": "^10.4.0",
         "globals": "^16.4.0",
-        "happy-dom": "^18.0.1",
+        "happy-dom": "^20.0.11",
         "husky": "^9.1.7",
         "jsdom": "^27.0.0",
         "path": "^0.12.7",
@@ -77,18 +79,18 @@
         "rollup-plugin-visualizer": "^6.0.3",
         "sass": "^1.81.0",
         "sass-loader": "^16.0.3",
-        "tailwindcss": "^4.1.13",
+        "tailwindcss": "^4.1.17",
         "terser": "^5.36.0",
-        "typescript": "5.5.3",
+        "typescript": "~5.9.3",
         "unplugin-auto-import": "^20.1.0",
         "unplugin-icons": "^22.3.0",
-        "unplugin-vue-components": "^29.1.0",
+        "unplugin-vue-components": "^30.0.0",
         "vite": "^7.1.6",
         "vite-plugin-compression": "^0.5.1",
         "vite-plugin-inspect": "^11.3.3",
         "vite-plugin-svg-icons": "^2.0.1",
         "vite-plugin-vue-devtools": "^8.0.2",
-        "vitest": "^3.2.4",
+        "vitest": "^4.0.15",
         "vue-tsc": "^3.0.7"
     }
 }
