build(deps): 固定 three.js 相关依赖版本

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
+pnpm-lock.yaml
+
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
