--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
         "pinia": "^3.0.3",
         "pinia-plugin-persist": "^1.0.0",
         "sparticles": "^1.3.1",
-        "three": "^0.166.0",
-        "three-css3d": "^1.0.6",
+        "three": "0.166.0",
+        "three-css3d": "1.0.6",
         "uuid": "^13.0.0",
         "vue": "^3.5.13",
         "vue-dompurify-html": "^5.2.0",
@@ -58,7 +58,7 @@
         "@types/lodash-es": "^4.17.12",
         "@types/markdown-it": "^14.1.2",
         "@types/node": "^24.10.2",
-        "@types/three": "^0.166.0",
+        "@types/three": "0.166.0",
         "@typescript-eslint/eslint-plugin": "^8.49.0",
         "@typescript-eslint/parser": "^8.49.0",
         "@vitejs/plugin-legacy": "^7.2.1",
