--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,6 +86,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tagName: ${{ github.ref_name }}
+          releaseName: 'Release ${{ github.ref_name }}'
           releaseBody: See the assets to download this version and install.
           releaseDraft: true
           prerelease: false
@@ -108,6 +109,7 @@ jobs:
         with:
           files: |
             dist.zip
+          name: 'Release ${{ github.ref_name }}'
           draft: true
           prerelease: false
           generate_release_notes: true
