--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "@vueuse/core": "^14.1.0",
         "axios": "^1.7.8",
         "canvas-confetti": "^1.9.3",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "dayjs": "^1.11.13",
         "dexie": "^4.2.1",
         "github-markdown-css": "^5.8.0",
@@ -31,7 +33,9 @@
         "markdown-it": "^14.1.0",
         "pinia": "^3.0.3",
         "pinia-plugin-persist": "^1.0.0",
+        "reka-ui": "^2.6.1",
         "sparticles": "^1.3.1",
+        "tailwind-merge": "^3.4.0",
         "three": "0.166.0",
         "three-css3d": "1.0.6",
         "uuid": "^13.0.0",
@@ -84,6 +88,7 @@
         "sass-loader": "^16.0.3",
         "tailwindcss": "^4.1.17",
         "terser": "^5.36.0",
+        "tw-animate-css": "^1.4.0",
         "typescript": "~5.9.3",
         "unplugin-auto-import": "^20.1.0",
         "unplugin-icons": "^22.3.0",
