build(.gitignore): 添加 husky 目录到忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-
+.husky/_
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
