--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,7 @@ web_modules/
 .env.production.local
 .env.local
 
-components.d.ts
+**/components.d.ts
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
