--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "vue-draggable-plus": "^0.6.0",
         "vue-i18n": "^11.2.2",
         "vue-router": "^4.5.0",
+        "vue-sonner": "^2.0.9",
         "vue-toast-notification": "^3",
         "vue3-colorpicker": "^2.3.0",
         "xlsx": "^0.18.5",
