feat:添加服务器后端使用Sqllite数据库存储数据，用于多用户共享数据 增加主题功能，每个主题隔离数据，类似多租户 增加分享抽奖页面链接，使用户可以主动加入抽奖名单

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
         "test:ui": "vitest --ui",
         "preview": "vite preview",
         "lint": "eslint ./src",
-        "lint:fix": "eslint ./src --fix"
+        "lint:fix": "eslint ./src --fix",
+        "server": "cd server && npm start",
+        "server:dev": "cd server && npm run dev",
+        "server:install": "cd server && npm install"
     },
     "dependencies": {
         "@tweenjs/tween.js": "^23.1.2",
