feat: ✨ 界面设置中模块使用瀑布流布局 #96

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "lodash-es": "^4.17.21",
         "lucide-vue-next": "^0.559.0",
         "markdown-it": "^14.1.0",
+        "masonry-layout": "^4.2.2",
         "pinia": "^3.0.3",
         "pinia-plugin-persist": "^1.0.0",
         "reka-ui": "^2.6.1",
@@ -63,6 +64,7 @@
         "@types/canvas-confetti": "^1.6.4",
         "@types/lodash-es": "^4.17.12",
         "@types/markdown-it": "^14.1.2",
+        "@types/masonry-layout": "^4.2.8",
         "@types/node": "^25.0.0",
         "@types/three": "0.166.0",
         "@typescript-eslint/eslint-plugin": "^8.49.0",
