build(release): 修改发布工作流触发条件

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: Build and Release
 
 on:
-  pull_request:
-    branches: [main]
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   build-and-release:
