--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,6 @@ jobs:
       - name: Prepare directories
         run: |
           mv dist dist-prod
-          mv dist-prod/index.html dist-prod/404.html
 
       - name: Create production build archive
         run: |
@@ -53,6 +52,16 @@ jobs:
           name: web-build
           path: dist.zip
           
+      - name: Prepare GitHub Pages artifact
+        run: |
+          cp -r dist-prod dist-gh-pages
+
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: dist-gh-pages
+
       - name: Prepare GitHub Pages artifact
         run: |
           cp -r dist-prod dist-gh-pages
