build: 🏗️ 部署github pages时应该把index.html复制一份成为404.html确保刷新可访问

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Prepare directories
         run: |
           mv dist dist-prod
+          cp dist-prod/index.html dist-prod/404.html
 
       - name: Create production build archive
         run: |
