--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "app"
-version = "0.5.2"
+version = "0.5.3"
 description = "A Tauri App"
 authors = ["you"]
 license = ""
@@ -21,5 +21,5 @@ tauri-build = { version = "2.5.3", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.9.4", features = [] }
+tauri = { version = "2.9.4", features = ["devtools"] }
 tauri-plugin-log = "2"
