--- a/ws_server/Cargo.toml
+++ b/ws_server/Cargo.toml
@@ -8,5 +8,6 @@ actix-cors = "0.7.1"
 actix-web = "4"
 actix-ws = { version = "0.3.0" }
 futures-util = "0.3.31"
+serde = { version = "1.0.228", features = ["derive"] }
 tokio = { version = "1.49.0", features = ["rt", "time", "macros"] }
 tokio-stream = { version = "^0.1.18", features = ["full"] }
