--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
         "esModuleInterop": true,
         "lib": [
             "ESNext",
-            "DOM"
+            "DOM",
+            "WebWorker"
         ],
         "skipLibCheck": true,
         "baseUrl": ".",
