--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^5.0.1",
+    "@headlessui/vue": "^1.7.23",
     "@tweenjs/tween.js": "23.1.2",
     "@vueuse/core": "^14.1.0",
+    "@vueuse/integrations": "^14.1.0",
     "axios": "^1.13.2",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
@@ -36,6 +39,7 @@
     "masonry-layout": "^4.2.2",
     "pinia": "^3.0.4",
     "pinia-plugin-persist": "^1.0.0",
+    "qrcode": "^1.5.4",
     "reka-ui": "^2.7.0",
     "sparticles": "^1.3.1",
     "tailwind-merge": "^3.4.0",
