--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "log-lottery",
   "private": true,
-  "version": "0.5.4",
+  "version": "0.6.0-beta.1",
   "type": "module",
   "license": "MIT",
   "scripts": {
