--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "app"
-version = "0.6.0-beta.1"
+version = "0.6.0-1"
 description = "A Tauri App"
 authors = [ "you" ]
 license = ""
