feat: ✨ preview file

--- a/package.json
+++ b/package.json
@@ -63,8 +63,11 @@
     "@eslint/js": "^9.39.2",
     "@iconify-json/ep": "^1.2.3",
     "@iconify-json/fluent": "^1.2.36",
+    "@iconify-json/material-icon-theme": "^1.2.48",
+    "@iconify-json/material-symbols": "^1.2.52",
     "@iconify-json/streamline-color": "^1.2.2",
     "@iconify-json/streamline-ultimate-color": "^1.2.2",
+    "@iconify-json/vscode-icons": "^1.2.40",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/cli": "^2.9.6",
