Feature person avatar image (#231)：人员头像优化；上传文件与存储文件优化
* feat: ✨ tab栏切换头像与奖项

* feat: ✨ 图片和音乐文件存储

* feat: ✨ 文件上传与图标引入

* feat: ✨ preview file

* feat: ✨ 文件预览

* feat: ✨ preview file

* feat: ✨ 批量上传文件

* feat: ✨ 上传zip文件处理

* feat: ✨ 人员列表展示本地图片

* feat: ✨ 手动同步显示头像

还有缺陷，刷新页面后blob的链接就改变了，还需要手动刷新显示头像

* feat: ✨ 上传压缩包图片时对图片进行压缩

* feat: ✨ 文件大小大于20kb则对其进行压缩

* feat: ✨ 上传图片压缩包优化

* feat: ✨ 上传头像zip包后，同步头像

* feat: ✨ 初始进入页面和上传头像时同步头像

* feat: ✨ indexDbS统一管理

* feat: ✨ 优化图片上传

* feat: ✨ 其他地方跳转图片管理

* feat: ✨ 音乐文件上传

* feat: ✨ 说明以及文件更改

* feat: ✨ 上传图片优化

--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "compressorjs": "^1.2.1",
     "dayjs": "^1.11.19",
     "dexie": "^4.2.1",
     "github-markdown-css": "^5.8.1",
     "gsap": "^3.14.2",
+    "jszip": "^3.10.1",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.22",
     "lucide-vue-next": "^0.562.0",
@@ -63,6 +65,11 @@
     "@eslint/js": "^9.39.2",
     "@iconify-json/ep": "^1.2.3",
     "@iconify-json/fluent": "^1.2.36",
+    "@iconify-json/material-icon-theme": "^1.2.48",
+    "@iconify-json/material-symbols": "^1.2.52",
+    "@iconify-json/streamline-color": "^1.2.2",
+    "@iconify-json/streamline-ultimate-color": "^1.2.2",
+    "@iconify-json/vscode-icons": "^1.2.40",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/cli": "^2.9.6",
